--- a/website.html
+++ b/website.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <h1>Gorillaz</h1>
-<p>Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista e líder do Blur, Damon Albarn, e pelo cartunista Jamie Hewlett, cocriador da história em quadrinhos Tank Girl. A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente. Seu estilo musical normalmente é classificado como rock alternativo, embora haja muita influência do britpop, dub e da eletrônica.</p>
+<h3>Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</h3>
+<p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p><br>
+<p>O estilo musical é normalmente classificado como rock alternativo, embora haja muita influência de britpop, dub e de eletrônica.</p>
 </body>
 </html>
