--- a/website.html
+++ b/website.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
+<body style="background-color:#3497fd;">
 <head>
 <title>GORILLAZ</title>
 </head>
 <body>
   <center>
 <h1>Gorillaz</h1>
+<img src="https://store.gorillaz.com/on/demandware.static/-/Sites-Warner_EU_Gold-catalog/default/dw44ef02e5/images/gorillaz/gorillaz-logo_spray-grey.png" alt="W3Schools.com" >
+
+<div1 class="w3-container">  
 <h3>Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</h3>
 <p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p><br>
 <p>O estilo musical é normalmente classificado como rock alternativo, embora haja muita influência de britpop, dub e de eletrônica.</p>
+
+
+</div1>
   </center>
 </body>
 </html>
