--- a/website.html
+++ b/website.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:#3497fd;">
+
 <head>
 <title>GORILLAZ</title>
 </head>
@@ -9,13 +9,33 @@
 <h1>Gorillaz</h1>
 <img src="https://store.gorillaz.com/on/demandware.static/-/Sites-Warner_EU_Gold-catalog/default/dw44ef02e5/images/gorillaz/gorillaz-logo_spray-grey.png" alt="W3Schools.com" >
 
-<div1 class="w3-container">  
-<h3>Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</h3>
-<p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p><br>
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">A BANDA</h2>
+    <p class="w3-opacity"><i>Gorillaz</i></p>
+    <p class="w3-justify">Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</p>
+	<p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p><br>
 <p>O estilo musical é normalmente classificado como rock alternativo, embora haja muita influência de britpop, dub e de eletrônica.</p>
+    <div class="w3-row w3-padding-32">
+      <div class="w3-third">
+        <p>Name</p>
+        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>Name</p>
+        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+      </div>
+	  <div class="w3-third">
+        <p>Name</p>
+        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+      </div>
+      <div class="w3-third">
+        <p>Name</p>
+        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+      </div>
+	  
+    </div>
+  </div>
 
-
-</div1>
   </center>
 </body>
 </html>
