--- a/website.html
+++ b/website.html
@@ -2,40 +2,93 @@
 <html>
 
 <head>
-<title>GORILLAZ</title>
+    <style>
+        body {
+            font-family: "Lato", sans-serif;
+        }
+
+        .mySlides {
+            display: none;
+        }
+
+        .w3-third {
+            width: 20%;
+            float: left; /* Alinha as imagens lado a lado */
+            margin-right: 5%; /* Adiciona espaçamento entre as imagens */
+            background-color: Black; /* Cor de fundo das imagens */
+            padding: 5px; /* Espaçamento interno das imagens */
+        }
+
+        /* Limpa o estilo do último elemento na linha */
+        .w3-third:last-child {
+            margin-right: 0;
+        }
+
+        /* Adiciona um clearfix para garantir que a linha se expanda corretamente */
+        .clearfix::after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+		
+        /* Estilo para os nomes dos membros da banda */
+        .band-member-name {
+            color: white; /* Cor do texto branco */
+        }
+    </style>
+
+    <title>GORILLAZ</title>
 </head>
+
 <body>
-  <center>
-<h1>Gorillaz</h1>
-<img src="https://store.gorillaz.com/on/demandware.static/-/Sites-Warner_EU_Gold-catalog/default/dw44ef02e5/images/gorillaz/gorillaz-logo_spray-grey.png" alt="W3Schools.com" >
+    <center>
+        <h1>Gorillaz</h1>
+        <img src="https://store.gorillaz.com/on/demandware.static/-/Sites-Warner_EU_Gold-catalog/default/dw44ef02e5/images/gorillaz/gorillaz-logo_spray-grey.png"
+            alt="W3Schools.com">
 
-<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">A BANDA</h2>
-    <p class="w3-opacity"><i>Gorillaz</i></p>
-    <p class="w3-justify">Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</p>
-	<p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p><br>
-<p>O estilo musical é normalmente classificado como rock alternativo, embora haja muita influência de britpop, dub e de eletrônica.</p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-	  <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
-      </div>
-	  
-    </div>
-  </div>
+        <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+            <h2 class="w3-wide">A BANDA</h2>
+            <p class="w3-opacity"><i>Gorillaz</i></p>
+            <p class="w3-justify">Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista
+                e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</p>
+            <p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado
+                da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p><br>
+            <p>O estilo musical é normalmente classificado como rock alternativo, embora haja muita influência de britpop,
+                dub e de eletrônica.</p>
+            <div class="clearfix">
+                <div class="w3-third">
+                    <p class="band-member-name">2D</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/c/c9/2-D_Phase_7_.jpg/revision/latest?cb=20221119163214"
+                        class="w3-round w3-margin-bottom" alt="2D" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Noodle</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/5/5a/Noodle_Phase_7_.jpg/revision/latest?cb=20230224011546"
+                        class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Murdoc</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/7/74/Murdoc_Phase_7_.jpg/revision/latest?cb=20221119130419"
+                        class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Russel</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/1/1f/Russel_Phase_7_.jpg/revision/latest?cb=20221119150046"
+                        class="w3-round" alt="Random Name" style="width:100%">
+                </div>
+            </div>
 
-  </center>
-</body>
+
+				<table>
+						<tr>
+						<th>Afonso Figueiredo 49957</th>
+						<th>Gonçalo Ricardo</th>
+						<th>Guilherme Prego</th>
+						</tr>
+
+				</table>
+
+
+		</center>
+	</body>
 </html>
