--- a/website.html
+++ b/website.html
@@ -48,7 +48,6 @@
 
         <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
             <h2 class="w3-wide">A BANDA</h2>
-            <p class="w3-opacity"><i>Gorillaz</i></p>
             <p class="w3-justify">Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista
                 e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</p>
             <p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado
@@ -82,8 +81,8 @@
 				<table>
 						<tr>
 						<th>Afonso Figueiredo 49957</th>
-						<th>Gonçalo Ricardo</th>
-						<th>Guilherme Prego</th>
+						<th>Gonçalo Ricardo 49707</th>
+						<th>Guilherme Prego 49805</th>
 						</tr>
 
 				</table>
