--- a/website.html
+++ b/website.html
@@ -5,6 +5,7 @@
     <style>
         body {
             font-family: "Lato", sans-serif;
+			background-image: url('https://i.imgur.com/hW6Km5l.png')
         }
 
         .mySlides {
@@ -35,6 +36,9 @@
         .band-member-name {
             color: white; /* Cor do texto branco */
         }
+		table, th, td {
+			border:2px solid black;
+		}
     </style>
 
     <title>GORILLAZ</title>
@@ -42,18 +46,17 @@
 
 <body>
     <center>
-        <h1>Gorillaz</h1>
-        <img src="https://store.gorillaz.com/on/demandware.static/-/Sites-Warner_EU_Gold-catalog/default/dw44ef02e5/images/gorillaz/gorillaz-logo_spray-grey.png"
-            alt="W3Schools.com">
+        <img src="https://i.imgur.com/BPtfSKB.png alt="Gorillaz logo" style="width:30%">
 
         <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-            <h2 class="w3-wide">A BANDA</h2>
+            <h2 class="w3-wide">SOBRE A BANDA</h2>
             <p class="w3-justify">Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista
                 e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</p>
             <p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado
                 da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p><br>
             <p>O estilo musical é normalmente classificado como rock alternativo, embora haja muita influência de britpop,
                 dub e de eletrônica.</p>
+            <h2 class="w3-wide">MEMBROS</h2>
             <div class="clearfix">
                 <div class="w3-third">
                     <p class="band-member-name">2D</p>
@@ -75,16 +78,64 @@
                     <img src="https://static.wikia.nocookie.net/kong/images/1/1f/Russel_Phase_7_.jpg/revision/latest?cb=20221119150046"
                         class="w3-round" alt="Random Name" style="width:100%">
                 </div>
-            </div>
-
-
+            </div><br>
+            <h2 class="w3-wide">DISCOGRAFIA</h2>
+			<div class="clearfix">
+                <div class="w3-third">
+                    <p class="band-member-name">Gorillaz</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/f/f2/Gorillaz2001.jpg/revision/latest/scale-to-width-down/1000?cb=20180731180653"
+                        class="w3-round w3-margin-bottom" alt="2D" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Demon Days</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/f/f3/Gorillazdemondays.jpg/revision/latest/scale-to-width-down/1000?cb=20230915231728"
+                        class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Plastic Beach</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/0/03/PB.jpg/revision/latest/scale-to-width-down/1000?cb=20230516170516"
+                        class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">The Fall</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/3/32/The_Fall_Album_Art.jpg/revision/latest/scale-to-width-down/1000?cb=20180620191443"
+                        class="w3-round" alt="Random Name" style="width:100%">
+                </div>
+            </div><br>
+			<div class="clearfix">
+                <div class="w3-third">
+                    <p class="band-member-name">Humanz</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/f/f5/Humanz.jpg/revision/latest/scale-to-width-down/1000?cb=20180620231309"
+                        class="w3-round w3-margin-bottom" alt="2D" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">The Now Now</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/7/77/Gorillazthenownow.jpg/revision/latest/scale-to-width-down/1000?cb=20230630223007"
+                        class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Song Machine</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/4/4d/Song_Machine%2C_Season_One_-_Strange_Timez.jpg/revision/latest/scale-to-width-down/1000?cb=20200914172947"
+                        class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Cracker Island</p>
+                    <img src="https://static.wikia.nocookie.net/kong/images/2/2b/Cracker_Island_Album_HQ.jpg/revision/latest/scale-to-width-down/1000?cb=20230902220926"
+                        class="w3-round" alt="Random Name" style="width:100%">
+                </div>
+            </div><br>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/HyHNuVaZJ-k?si=42JsYNtWNarg5-gq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 				<table>
 						<tr>
-						<th>Afonso Figueiredo 49957</th>
-						<th>Gonçalo Ricardo 49707</th>
-						<th>Guilherme Prego 49805</th>
+						<th>Afonso Figueiredo</th>
+						<th>Gonçalo Ricardo</th>
+						<th>Guilherme Prego</th>
 						</tr>
-
+						<tr>
+						<td>49957</td>
+						<td>49707</td>
+						<td>49805</td>
+						</tr>
 				</table>
 
 
