--- a/website.html
+++ b/website.html
@@ -50,13 +50,31 @@
 
         <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
             <h2 class="w3-wide">SOBRE A BANDA</h2>
+			<h3><a href="https://www.gorillaz.com/" target="_blank">Site oficial</a></h3>
             <p class="w3-justify">Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista
                 e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</p>
             <p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado
-                da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p><br>
+                da colaboração entre vários outros músicos, sendo Damon Albarn o único membro permanente.</p>
             <p>O estilo musical é normalmente classificado como rock alternativo, embora haja muita influência de britpop,
                 dub e de eletrônica.</p>
-            <h2 class="w3-wide">MEMBROS</h2>
+			<h2 class="w3-wide">MEMBROS NÃO-VIRTUAIS</h2>
+			<div class="clearfix">
+                <div class="w3-third">
+                    <p class="band-member-name">Damon Albarn</p>
+                    <img src="https://i.imgur.com/yz2tcOM.png"
+                        class="w3-round w3-margin-bottom" alt="2D" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Jamie Hewlett</p>
+                    <img src="https://i.imgur.com/JJiSMuZ.png
+                        class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+                </div>
+                <div class="w3-third">
+                    <p class="band-member-name">Remi Kabaka Jr.</p>
+                    <img src="https://i.imgur.com/1xWqKZZ.png"
+                        class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+                </div><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <h2 class="w3-wide">MEMBROS VIRTUAIS</h2>
             <div class="clearfix">
                 <div class="w3-third">
                     <p class="band-member-name">2D</p>
