--- a/website.html
+++ b/website.html
@@ -3,6 +3,29 @@
 
 <head>
     <style>
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: gray;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
         body {
             font-family: "Lato", sans-serif;
 			background-image: url('https://i.imgur.com/hW6Km5l.png')
@@ -103,21 +126,25 @@
                     <p class="band-member-name">Gorillaz</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/f/f2/Gorillaz2001.jpg/revision/latest/scale-to-width-down/1000?cb=20180731180653"
                         class="w3-round w3-margin-bottom" alt="2D" style="width:100%">
+					<p class="band-member-name"><a href="https://open.spotify.com/album/4tUxQkrduOE8sfgwJ5BI2F?si=T91mbDxbRJ2_fZikcPMeBw" target="_blank">Spotify</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">Demon Days</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/f/f3/Gorillazdemondays.jpg/revision/latest/scale-to-width-down/1000?cb=20230915231728"
                         class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+					<p class="band-member-name"><a href="https://open.spotify.com/album/0bUTHlWbkSQysoM3VsWldT?si=K1Bxw7WKS1OeZvLc7w2S5A" target="_blank">Spotify</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">Plastic Beach</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/0/03/PB.jpg/revision/latest/scale-to-width-down/1000?cb=20230516170516"
                         class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+					<p class="band-member-name"><a href="https://open.spotify.com/album/2dIGnmEIy1WZIcZCFSj6i8?si=zL_EJeQ6TF6y3RHT7lXRIg" target="_blank">Spotify</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">The Fall</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/3/32/The_Fall_Album_Art.jpg/revision/latest/scale-to-width-down/1000?cb=20180620191443"
                         class="w3-round" alt="Random Name" style="width:100%">
+					<p class="band-member-name"><a href="https://open.spotify.com/album/5jJGGsAztgUEXUHHZ2zrah?si=evWlQMbSQP2VmMKgIZqt0w" target="_blank">Spotify</a></p>
                 </div>
             </div><br>
 			<div class="clearfix">
@@ -125,24 +152,27 @@
                     <p class="band-member-name">Humanz</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/f/f5/Humanz.jpg/revision/latest/scale-to-width-down/1000?cb=20180620231309"
                         class="w3-round w3-margin-bottom" alt="2D" style="width:100%">
+					<p class="band-member-name"><a href="https://open.spotify.com/album/0NvirtaDCaZU5PAW1O5FDE?si=2URf6kpzSgWA4_Xe8T0YDg" target="_blank">Spotify</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">The Now Now</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/7/77/Gorillazthenownow.jpg/revision/latest/scale-to-width-down/1000?cb=20230630223007"
                         class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+					<p class="band-member-name"><a href="https://open.spotify.com/album/1amYhlukNF8WdaQC3gKkgL?si=-fU9EyBKT6Cmcc9cxd5rDA" target="_blank">Spotify</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">Song Machine</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/4/4d/Song_Machine%2C_Season_One_-_Strange_Timez.jpg/revision/latest/scale-to-width-down/1000?cb=20200914172947"
                         class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
+					<p class="band-member-name"><a href="https://open.spotify.com/album/5I9K0u8r52jp4Y2bF8mOaz?si=Fvul_mbuStib9K39H04Zxg" target="_blank">Spotify</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">Cracker Island</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/2/2b/Cracker_Island_Album_HQ.jpg/revision/latest/scale-to-width-down/1000?cb=20230902220926"
                         class="w3-round" alt="Random Name" style="width:100%">
+					<p class="band-member-name"><a href="https://open.spotify.com/album/4wtZQMNTC1O79kDxMBsEan?si=BjXmOVDeTKe8zs3uHPmCTQ" target="_blank">Spotify</a></p>
                 </div>
             </div><br>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/HyHNuVaZJ-k?si=42JsYNtWNarg5-gq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
 				<table>
 						<tr>
 						<th>Afonso Figueiredo</th>
