--- a/website.html
+++ b/website.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/iQTU7LT.png">
     <style>
 a:link {
   color: white;
@@ -10,7 +11,7 @@ a:link {
 }
 
 a:visited {
-  color: gray;
+  color: SlateBlue;
   background-color: transparent;
   text-decoration: none;
 }
@@ -73,7 +74,7 @@ a:active {
 
         <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
             <h2 class="w3-wide">SOBRE A BANDA</h2>
-			<h3><a href="https://www.gorillaz.com/" target="_blank">Site oficial</a></h3>
+			<h3><a href="https://www.gorillaz.com/" target="_blank">Site oficial</a>&nbsp;&nbsp;<a href="https://www.instagram.com/gorillaz/" target="_blank">Instagram</a>&nbsp;&nbsp;<a href="https://twitter.com/gorillaz" target="_blank">Twitter</a>&nbsp;&nbsp;<a href="https://www.youtube.com/Gorillaz/" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/Gorillaz/" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://www.tiktok.com/@gorillaz" target="_blank">TikTok</a>&nbsp;&nbsp;<a href="https://discord.com/invite/Gorillaz" target="_blank">Discord</a>&nbsp;&nbsp;	<a href="https://www.snapchat.com/add/gorillaz" target="_blank">Snapchat</a>
             <p class="w3-justify">Gorillaz é uma banda virtual de trip rock britânica criada no ano de 1998 pelo vocalista
                 e líder dos Blur, Damon Albarn, e pelo artista Jamie Hewlett, co-criador da banda-desenhada Tank Girl.</p>
             <p>A banda é composta por quatro membros animados: 2-D, Murdoc, Noodle e Russel. A música do grupo é resultado
@@ -126,25 +127,25 @@ a:active {
                     <p class="band-member-name">Gorillaz</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/f/f2/Gorillaz2001.jpg/revision/latest/scale-to-width-down/1000?cb=20180731180653"
                         class="w3-round w3-margin-bottom" alt="2D" style="width:100%">
-					<p class="band-member-name"><a href="https://open.spotify.com/album/4tUxQkrduOE8sfgwJ5BI2F?si=T91mbDxbRJ2_fZikcPMeBw" target="_blank">Spotify</a></p>
+					<p class="band-member-name"><a href="https://open.spotify.com/album/4tUxQkrduOE8sfgwJ5BI2F?si=T91mbDxbRJ2_fZikcPMeBw" target="_blank">Spotify</a><br><a href="https://music.apple.com/pt/album/gorillaz/850576570" target="_blank">Apple Music</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">Demon Days</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/f/f3/Gorillazdemondays.jpg/revision/latest/scale-to-width-down/1000?cb=20230915231728"
                         class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
-					<p class="band-member-name"><a href="https://open.spotify.com/album/0bUTHlWbkSQysoM3VsWldT?si=K1Bxw7WKS1OeZvLc7w2S5A" target="_blank">Spotify</a></p>
+					<p class="band-member-name"><a href="https://open.spotify.com/album/0bUTHlWbkSQysoM3VsWldT?si=K1Bxw7WKS1OeZvLc7w2S5A" target="_blank">Spotify</a><br><a href="https://music.apple.com/pt/album/demon-days/850571319" target="_blank">Apple Music</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">Plastic Beach</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/0/03/PB.jpg/revision/latest/scale-to-width-down/1000?cb=20230516170516"
                         class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
-					<p class="band-member-name"><a href="https://open.spotify.com/album/2dIGnmEIy1WZIcZCFSj6i8?si=zL_EJeQ6TF6y3RHT7lXRIg" target="_blank">Spotify</a></p>
+					<p class="band-member-name"><a href="https://open.spotify.com/album/2dIGnmEIy1WZIcZCFSj6i8?si=zL_EJeQ6TF6y3RHT7lXRIg" target="_blank">Spotify</a><br><a href="https://music.apple.com/pt/album/plastic-beach-deluxe-version/859841880" target="_blank">Apple Music</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">The Fall</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/3/32/The_Fall_Album_Art.jpg/revision/latest/scale-to-width-down/1000?cb=20180620191443"
                         class="w3-round" alt="Random Name" style="width:100%">
-					<p class="band-member-name"><a href="https://open.spotify.com/album/5jJGGsAztgUEXUHHZ2zrah?si=evWlQMbSQP2VmMKgIZqt0w" target="_blank">Spotify</a></p>
+					<p class="band-member-name"><a href="https://open.spotify.com/album/5jJGGsAztgUEXUHHZ2zrah?si=evWlQMbSQP2VmMKgIZqt0w" target="_blank">Spotify</a><br><a href="https://music.apple.com/pt/album/the-fall/850585388" target="_blank">Apple Music</a></p>
                 </div>
             </div><br>
 			<div class="clearfix">
@@ -152,25 +153,25 @@ a:active {
                     <p class="band-member-name">Humanz</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/f/f5/Humanz.jpg/revision/latest/scale-to-width-down/1000?cb=20180620231309"
                         class="w3-round w3-margin-bottom" alt="2D" style="width:100%">
-					<p class="band-member-name"><a href="https://open.spotify.com/album/0NvirtaDCaZU5PAW1O5FDE?si=2URf6kpzSgWA4_Xe8T0YDg" target="_blank">Spotify</a></p>
+					<p class="band-member-name"><a href="https://open.spotify.com/album/0NvirtaDCaZU5PAW1O5FDE?si=2URf6kpzSgWA4_Xe8T0YDg" target="_blank">Spotify</a><br><a href="https://music.apple.com/pt/album/humanz-deluxe/1217911994" target="_blank">Apple Music</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">The Now Now</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/7/77/Gorillazthenownow.jpg/revision/latest/scale-to-width-down/1000?cb=20230630223007"
                         class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
-					<p class="band-member-name"><a href="https://open.spotify.com/album/1amYhlukNF8WdaQC3gKkgL?si=-fU9EyBKT6Cmcc9cxd5rDA" target="_blank">Spotify</a></p>
+					<p class="band-member-name"><a href="https://open.spotify.com/album/1amYhlukNF8WdaQC3gKkgL?si=-fU9EyBKT6Cmcc9cxd5rDA" target="_blank">Spotify</a><br><a href="https://music.apple.com/pt/album/the-now-now/1387814084" target="_blank">Apple Music</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">Song Machine</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/4/4d/Song_Machine%2C_Season_One_-_Strange_Timez.jpg/revision/latest/scale-to-width-down/1000?cb=20200914172947"
                         class="w3-round w3-margin-bottom" alt="Random Name" style="width:100%">
-					<p class="band-member-name"><a href="https://open.spotify.com/album/5I9K0u8r52jp4Y2bF8mOaz?si=Fvul_mbuStib9K39H04Zxg" target="_blank">Spotify</a></p>
+					<p class="band-member-name"><a href="https://open.spotify.com/album/5I9K0u8r52jp4Y2bF8mOaz?si=Fvul_mbuStib9K39H04Zxg" target="_blank">Spotify</a><br><a href="https://music.apple.com/pt/album/song-machine-season-one-strange-timez-deluxe/1530812327" target="_blank">Apple Music</a></p>
                 </div>
                 <div class="w3-third">
                     <p class="band-member-name">Cracker Island</p>
                     <img src="https://static.wikia.nocookie.net/kong/images/2/2b/Cracker_Island_Album_HQ.jpg/revision/latest/scale-to-width-down/1000?cb=20230902220926"
                         class="w3-round" alt="Random Name" style="width:100%">
-					<p class="band-member-name"><a href="https://open.spotify.com/album/4wtZQMNTC1O79kDxMBsEan?si=BjXmOVDeTKe8zs3uHPmCTQ" target="_blank">Spotify</a></p>
+					<p class="band-member-name"><a href="https://open.spotify.com/album/4wtZQMNTC1O79kDxMBsEan?si=BjXmOVDeTKe8zs3uHPmCTQ" target="_blank">Spotify</a><br><a href="https://music.apple.com/pt/album/cracker-island-deluxe/1673502694" target="_blank">Apple Music</a></p>
                 </div>
             </div><br>
 				<table>
